src/test/deca/syntax/invalid/sansobjet/DeclaToSmallFloatHex.deca
//DeclaIntF.deca:5:8: no viable alternative at input '1'
//Description: teste declaration incorrect nombre
//Resultat: erreur ligne 5: nombre trop petit
{
    float f = 0x1.0p-128;
}
